[package]
authors = ["The Rust Project Developers"]
name = "rustc_codegen_llvm"
version = "0.0.0"
edition = "2018"

[lib]
name = "rustc_codegen_llvm"
path = "lib.rs"
crate-type = ["dylib"]
test = false

[dependencies]
rustc_llvm = { path = "../librustc_llvm" }
rustc_codegen_yksir = { path = "../librustc_codegen_yksir" }
